prusti-tests/tests/verify/fail/no-annotations/assert-false.rs
fn main() {
    assert!(false);  //~ ERROR the asserted expression might not hold
}
